Fixed creator-credit text alignment to sit right between the buttons

--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body {
 }
 
 .creator-credit {
+  align-self: center;
   color: #f9faf8;
   font-size: 16px;
   font-weight: bold;
